Added new 90s themed list. Lowered guesses to 8

--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 
     <div>
         <h1 class="game-title display-4">Word Guess</h1>
-        <p class="game-title" id="sub-head">(press any letter on the keyboard)</h1>
+        <p class="game-title" id="sub-head">(a less gory version of Hangman)</h1>
 
     </div>
     <div class="container rounded" id="test">
 
-        <div class="row">
+        <div class="row display-4">
 
-            <div class="col-4">
-                <h1>losses</h1>
+            <div class="col-4 display-4">
+                <p>losses</p>
                 <p id="losses-div"></p>
             </div>
             <div class="col-4">
-                <h1>guesses</h1>
+                <p>guesses</p>
                 <p id="guesses-div"></p>
             </div>
             <div class="col-4">
-                <h1>wins</h1>
+                <p>wins</p>
                 <p id="wins-div"></p>
             </div>
         </div>
@@ -42,9 +42,9 @@
 
         <div class="row">
             <div class = "col-2">
-                <p class = "continue" id = "youLose">*</p> 
+                <p class = "continue display-4" id = "youLose">L</p> 
             </div>
-            <div class="col-8">
+            <div class="col-8 display-4">
                 <!-- <h1>guess the password</h1> -->
                 <div>
                     <p id="hiddenWord-div"></p>
@@ -52,15 +52,15 @@
                 <br>
             </div>
             <div class = "col-2">
-                <p class = "continue" id = "youWin">*</p> 
+                <p class = "continue display-4" id = "youWin">W</p> 
             </div>
         </div>
 
         <hr>
 
         <div class="row">
-            <div class="col-md-12">
-                <h1>letters guessed so far</h1>
+            <div class="col-md-12 display-4">
+                <!-- <h1>letters guessed so far</h1> -->
                 <div>
                     <p id="letterGuesses-div"></p>
                 </div>
