took out comma to fix bug. added asterisks instead of W & L placeholders

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="row">
             <div class = "col-2">
-                <p class = "continue display-4" id = "youLose">L</p> 
+                <p class = "continue display-4" id = "youLose">*</p> 
             </div>
             <div class="col-8 display-4">
                 <!-- <h1>guess the password</h1> -->
@@ -52,7 +52,7 @@
                 <br>
             </div>
             <div class = "col-2">
-                <p class = "continue display-4" id = "youWin">W</p> 
+                <p class = "continue display-4" id = "youWin">*</p> 
             </div>
         </div>
 
